--- a/myportfolio/package.json
+++ b/myportfolio/package.json
@@ -10,11 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/vite": "^4.1.4",
-    "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-parallax-tilt": "^1.7.291",
     "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.4"
   },
