--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.299",
     "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.4"
   },
