--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-three/drei": "^10.5.1",
+    "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "framer-motion": "^12.23.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.299",
     "react-simple-typewriter": "^5.0.1",
-    "tailwindcss": "^4.1.4"
+    "tailwindcss": "^4.1.4",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
