--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@microsoft/clarity": "^1.0.0",
+    "@nextui-org/react": "^2.6.11",
+    "@nextui-org/theme": "^2.4.5",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.4",
-    "framer-motion": "^12.23.6",
+    "framer-motion": "^12.23.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.11",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.299",
     "react-simple-typewriter": "^5.0.1",
