--- a/package.json
+++ b/package.json
@@ -11,25 +11,30 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@gsap/react": "^2.1.2",
     "@microsoft/clarity": "^1.0.0",
     "@nextui-org/react": "^2.6.11",
     "@nextui-org/theme": "^2.4.5",
     "@react-three/drei": "^10.5.1",
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
+    "lodash": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-github-calendar": "^4.5.11",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.299",
+    "react-router-dom": "^6.28.0",
     "react-simple-typewriter": "^5.0.1",
-  "react-router-dom": "^6.28.0",
     "tailwindcss": "^4.1.4",
     "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/lodash": "^4.17.20",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
