--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "@react-three/fiber": "^9.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.24",
+    "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
     "lenis": "^1.3.15",
     "lodash": "^4.17.21",
+    "lucide": "^0.555.0",
     "ogl": "^1.0.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-github-calendar": "^4.5.11",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.299",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^6.30.2",
     "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "^4.1.4",
     "three": "^0.178.0"
