--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ogl": "^1.0.11",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-github-calendar": "^4.5.11",
     "react-icons": "^5.5.0",
     "react-parallax-tilt": "^1.7.299",
